added virtualenv gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,12 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Virtualenv
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ss]cripts
+pyvenv.cfg
+pip-selfcheck.json
