--- a/webapp/requirements.txt
+++ b/webapp/requirements.txt
@@ -3,8 +3,12 @@ Django==1.11.1
 django-admin-easy==0.3.2
 django-jet==1.0.6
 django-modeladmin-reorder==0.2
+numpy==1.13.1
 packaging==16.8
+pandas==0.20.3
 pyparsing==2.2.0
+python-dateutil==2.6.1
 pytz==2017.2
 PyYAML==3.12
 six==1.10.0
+xlrd==1.0.0
